force-app/main/default/objects/OffreLieu__c/OffreLieu__c.object-meta.xml
<CustomObject>
    <label>Lieu de offre</label>
    <nameField>
        <displayFormat>lieu-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lieux</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>