force-app/main/default/objects/OffreLieu__c/fields/CodeComplexe2__c.field-meta.xml
<CustomField>
    <fullName>CodeComplexe2__c</fullName>
    <formula>Complexe__r.CodeComplexe__c</formula>
    <label>CodeComplexe2</label>
    <type>Text</type>
</CustomField>