force-app/main/default/objects/OffreLieu__c/fields/CodeComplexe__c.field-meta.xml
<CustomField>
    <fullName>CodeComplexe__c</fullName>
    <externalId>true</externalId>
    <label>CodeComplexe</label>
    <length>5</length>
    <type>Text</type>
</CustomField>