force-app/main/default/objects/OffreLieu__c/fields/Complexe__c.field-meta.xml
<CustomField>
    <fullName>Complexe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cinéma</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Complexe__c.EstActif__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Complexe__c.Point_vente_UI__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Offres</relationshipLabel>
    <relationshipName>Complexes</relationshipName>
    <type>Lookup</type>
</CustomField>