force-app/main/default/objects/OffreLieu__c/fields/Offre__c.field-meta.xml
<CustomField>
    <fullName>Offre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offre</label>
    <referenceTo>Offre__c</referenceTo>
    <relationshipLabel>Lieux</relationshipLabel>
    <relationshipName>Lieux</relationshipName>
    <type>Lookup</type>
</CustomField>